trying to make positions relative to fix overlap

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -1138,6 +1138,7 @@ pre {
         overflow: visible !important;
         break-before: always !important;
         page-break-inside: avoid !important;
+        position: relative !important;
         height: 90% !important;
     }
 }
